--- a/rustmsx-wasm/index.css
+++ b/rustmsx-wasm/index.css
@@ -99,7 +99,14 @@ body {
   flex: 1;
   display: flex;
   flex-direction: column;
+  align-items: center;
+  justify-content: center;
   overflow: auto;
+}
+
+#screen {
+  width: 768px;
+  height: 576px;
 }
 
 .split {
